[project]
name = "pd-code-mirror"
version = "0.0.1"
description = "# pd_code_mirror"
authors = [
    {name = "mirror a link or knot with pd_code."}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pd_code_sanity"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
